--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "nel-thinsdk-ts",
   "version": "0.0.1",
   "description": "NEL's NEO thinSDK written in TS",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "author": "NewEconoLab",
   "devDependencies": {
-    "@types/node": "^6.0.87"
+    "cross-env": "^5.2.0",
+    "jest": "^23.4.2",
+    "prettier": "^1.14.0",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.14.0",
+    "typescript": "^3.1.6"
   },
   "dependencies": {
+    "buffer": "^5.2.1",
     "crypto-js": "^3.1.9-1",
     "cryptojs": "^2.5.3"
   },
@@ -21,20 +28,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf ./lib ./dist",
-    "dist": "cross-env NODE_ENV=development webpack --mode development",
-    "dist:prod": "cross-env NODE_ENV=production webpack --mode production",
-    "prepublishOnly": "yarn clean && yarn build && yarn dist",
-    "prestart": "yarn build && yarn dist",
-    "pretty": "prettier --write --loglevel=warn \"**/{src,__{tests,integration}__}/**/*.ts\"",
-    "lint": "tslint src/**/*.ts"
-  },
-  "devDependencies": {
-    "cross-env": "^5.2.0",
-    "jest": "^23.4.2",
-    "prettier": "^1.14.0",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.14.0",
-    "typescript": "^3.0.1"
+    "pretty": "prettier --write --loglevel=warn \"**/{src,__{tests,integration}__}/**/*.ts\""
   },
   "files": [
     "lib/"
