--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
-{ 
+{
   "compilerOptions": {
     "target": "es5",
-    "rootDir": "src",
-    "outDir": "lib",
-    "typeRoots": ["./node_modules/@types", "./typings"]
+    //"declaration": true,
+    "outDir": "./lib"
   },
-  "include": ["src/**/*", "./typings/*"]
+  "include": ["src"],
+  "exclude": ["node_modules", "**/__tests__/*"]
 }
-
